add binotel chat, hide current one

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,17 @@
 
   <body>
     <app-root></app-root>
+    <script type="text/javascript">
+      (function (d, w, s) {
+        var widgetHash = '0Z2Sf9c8aii98df6DSiJ',
+          bch = d.createElement(s);
+        bch.type = 'text/javascript';
+        bch.async = true;
+        bch.src = '//widgets.binotel.com/chat/widgets/' + widgetHash + '.js';
+        var sn = d.getElementsByTagName(s)[0];
+        sn.parentNode.insertBefore(bch, sn);
+      })(document, window, 'script');
+    </script>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
   <script
